<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@color/colorSecondaryLight">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="92dp"
            android:layout_height="138dp"
            android:scaleType="centerCrop"
            android:background="@android:color/holo_blue_light"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/ivPoster"
            tool:text="Judul Film" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPoster"
            android:layout_below="@id/tvTitle"
            android:text="@string/genre"
            tool:text="Genre: ..." />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPoster"
            android:layout_below="@id/tvGenre"
            android:text="@string/rating"
            tool:text="Rating: 0.000" />

        <TextView
            android:id="@+id/tvPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPoster"
            android:layout_below="@id/tvRating"
            android:text="@string/popularity"
            tool:text="Popularity: 0.0000" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPoster"
            android:layout_below="@id/tvPopularity"
            android:text="@string/year"
            tool:text="2018"/>



    </RelativeLayout>
</android.support.v7.widget.CardView>
